--- a/package.json
+++ b/package.json
@@ -12,11 +12,10 @@
     "!src/test"
   ],
   "scripts": {
-    "build": "rm -rf lib && tsc",
+    "build": "rimraf lib && tsc",
     "up": "docker-compose up -d 2>&1",
     "down": "docker-compose down -v 2>&1",
-    "test": "mocha -r dotenv/config lib/test/*.test.js --exit --timeout 5000",
-    "postinstall": "cd node_modules/@belopash/typeorm-store && npm run build"
+    "test": "mocha -r dotenv/config lib/test/*.test.js --exit --timeout 5000"
   },
   "dependencies": {
     "@subsquid/logger": "^1.3.3",
@@ -35,6 +34,7 @@
     "@types/pg": "^8.11.5",
     "expect": "^29.7.0",
     "mocha": "^10.4.0",
+    "rimraf": "^5.0.5",
     "typescript": "^5.4.5"
   }
 }
